--- a/css/styles.css
+++ b/css/styles.css
@@ -406,11 +406,14 @@ body {
 }
 
 .join {
+    font-size: 14px;
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-bg-color);
+    margin: 0;
+    margin-bottom: 20px;
 
 }
 .join-block,
@@ -421,8 +424,8 @@ body {
 
 .footer-blocks {
     display: flex;
-    flex-wrap: wrap;
     gap: 70px;
+    align-items: baseline;
 }
 
 .icons-footer {
